fix(auto): preserve selected targets and support API 28 navigation encoding